tests/invalid/mostly_uniq2.err_exp
mostly_uniq2.m:009: In `foo'(di, uo):
mostly_uniq2.m:009:   error: invalid determinism for a predicate with I/O state
mostly_uniq2.m:009:   arguments.
mostly_uniq2.m:017: In clause for `foo(di, uo)':
mostly_uniq2.m:017:   in argument 2 of call to predicate `io.write_int'/3:
mostly_uniq2.m:017:   mode error: variable `DCG_0' has instantiatedness
mostly_uniq2.m:017:   `mostly_unique',
mostly_uniq2.m:017:   expected instantiatedness was `unique'.
For more information, recompile with `-E'.
